[metadata]
name = torch-radon
#version = attr: fbp.__version__
version = 0.1.0
description = A PyTorch extension to compute radon transfrom and its adjoint operator on gpu
long_description = file: README.md
url = https://github.com/kshkss/torch-radon
author = Akishika Issui
license = GNU GENERAL PUBLIC LICENSE Version 3 (GPLv3)
keywords = ct, radon
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7

